--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,3 +12,18 @@ body {
   background-size: contain;
   background-image: url("../images/notfound.svg");
 }
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #343a40;
+}
